--- a/style.css
+++ b/style.css
@@ -354,27 +354,29 @@ body.projects-page{
   z-index: 1000;
 }
 .video-container {
-  margin: 2rem auto;
-  max-width: 960px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  border-radius: 8px;
-  overflow: hidden;
+  flex: 1 1 50%;
+  max-width: 40%;
+}
+.video-container iframe {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16 / 9;
+  border: none;
+  display: block;
 }
 .project-content {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
   align-items: flex-start;
-  margin-top: 2rem;
-}
-.video-container {
-  flex: 1 1 45%;
+  /*margin-top: 2rem;*/
 }
 .project-description {
-  flex: 1 1 50%;
+  flex: 1 1 60%;
+  max-width: 50%;
   font-size: 1rem;
-  line-height: 1.6;
-  padding-top: 1rem;
+  line-height: 1.25;
+  /*padding-top: 1rem;*/
   color: #9a3334;
 }
 .code-editor {
@@ -384,6 +386,8 @@ body.projects-page{
   margin-top: 2rem;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
   font-family: 'Fira Code', monospace;
+  height: 500px;
+  overflow-y: auto;
 }
 .code-header {
   display: flex;
